Bug 484975 - Default position of quick tiling dividers (50%) should be based on available space, not including panels
Summary: Default position of quick tiling dividers (50%) should be based on available ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Quick Tiling (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 513728 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-03 11:59 UTC by matterhorn103
Modified: 2026-03-13 00:13 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description matterhorn103 2024-04-03 11:59:24 UTC
SUMMARY

In Plasma 6.0 (and historically), when a window is tiled using the Quick Tiling feature, and the position of the dividers between tiles has not yet been set, the screen is split equally along each edge. Two quick-tiled windows next to each other both have 50% of the horizontal screen width, two tiled above each other 50% of the vertical height.

When panels are used and are set to be Always Visible, the size of windows added to the quick tile region containing the panel is decreased. Tiles are thus no longer equal in size. If the screen is a typical 1080p monitor, and a panel is thick (such as in the style of a Dock), the difference is quite significant.

A panel pinned to the left side of the screen, for example, results in all windows tiled to the left being smaller than those on the right. Obtaining a 50:50 split in size currently requires manual adjustment of the dividers.

***
My request:
Permanently visible panels should not be included in the calculation of the halfway points used for dividing the screen into quick tile zones. Instead, each tile should be exactly one half or one quarter of a maximized window.
***

Personally, this feels to me like it is the logical behaviour and should be default. However, if it's felt that the default behaviour should be as it is now, at least a toggle in the Window Behaviour settings would be nice. I feel like the code and maths can't be horrendously difficult to implement because the available non-panelled screen area is already being calculated for maximized windows in the same way, which are set to fill it. But I could be wrong, maybe it's not trivial.
Comment 1 fanzhuyifan 2024-04-03 15:37:09 UTC
Can reproduce.

Operating System: Arch Linux 
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.2-arch2-1 (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i9-13900H
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus G16 GU603VV_GU603VV
System Version: 1.0
Comment 2 Adam 2024-11-10 15:25:54 UTC
This change was introduced with plasma 5.27. You can check it quickly with Fedora 37 and Fedora 38 live iso in a vm.

The images I used:
- Fedora-KDE-Live-x86_64-37-1.7.iso, plasma 5.26.2
- Fedora-KDE-Live-x86_64-38-1.6.iso, plasma 5.27.4

VM settings:
- screen size 1280x800

After a VM is up:
- right click the panel, select "Enter edit mode"
- drag and drop the "Drag to move" handler to the left edge of the screen
- right click somewhere on the desktop, select "Exit Edit mode"
- open a Konsole window and have it focused

Fedora 37:
- press Super+right. The window reports "Size: 73 x 38"
- press Super+left. The window does not report a change in size

Fedora 38:
- press Super+right. The window reports "Size: 76 x 38"
- press Super+left. The window reports "Size: 70 x 38"

Kubuntu since 23.04 release (the first one with plasma 5.27) behaves the same, not expected way.

I've just tried it in KDE Neon with neon-user-20241105-0605.iso (additional init step: make the panel NOT float). It still splits unevenly. There are two more things I noticed in Neon:

1. When I quick tile the window to the left, it first gets resized to 50% of the screen width and then narrowed down to account for the panel width. There is enough time between the two steps to see it.
2. If I alternate Super+right and Super+left quickly, the left tile occasionally gets stuck in 50% screen size width. When stuck, the narrowing step no longer happens, no matter if I alternate left/right tiling quick of slow. It resets only when the window leaves the quick tile mode.

In Kubuntu 24.10, the left tile doesnt get stuck. Kubuntu runs x11, while Neon runs wayland. Mby, a wayland problem. In the same time, Fedora 38 is wayland as well, but there is no visible 2-steps resize.


Back to the uneven split issue. I dont see any logic behind this change in 5.27. Why would users want it? Mby it was unintentional?
Comment 3 Anthony Fieroni 2025-11-04 18:39:30 UTC
Still present, if panel is on left or right 50% tiling calculation is incorrect. But if panel top or bottom horizontal calculation is correct.
Comment 4 Nate Graham 2025-12-23 20:15:10 UTC
*** Bug 513728 has been marked as a duplicate of this bug. ***
Comment 5 Anthony 2026-03-06 04:29:45 UTC
I have a fix for this bug, but am unable to push my branch to the kwin repository and make a merge request. Can someone give advice on how to get my code to that repo?
Comment 6 Bug Janitor Service 2026-03-06 05:05:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8940
Comment 7 Anthony 2026-03-06 05:08:18 UTC
I figured out how to make a merge request.
Comment 8 Vlad Zahorodnii 2026-03-12 09:43:55 UTC
Git commit ed85f31856b54156b81d40624249660f75581969 by Vlad Zahorodnii, on behalf of Anthony Flammia.
Committed on 12/03/2026 at 09:15.
Pushed by vladz into branch 'master'.

Use clientArea instead of output to determine tiling geometry.

Fixes a bug with quick tiling geometry, which caused windows to be tiled
around the absolute center of the screen, ignoring that some usable
space is taken up by panels.

M  +4    -4    src/tiles/tile.cpp

https://invent.kde.org/plasma/kwin/-/commit/ed85f31856b54156b81d40624249660f75581969