Use clientArea instead of output to determine tiling geometry.

Fixes a bug with quick tiling geometry, which caused windows to be tiled
around the absolute center of the screen, ignoring that some usable
space is taken up by panels.

BUG: 484975